--- a/expe.tex
+++ b/expe.tex
@@ -94,7 +94,7 @@ The table \ref{table:ibp} shows the precision and recall results, for each netwo
  Graph10 -b/-h    &   0.981577 &   0.0910384 &   0.09826   &    11 \\
 \hline
 \end{tabular}  
-    \caption{immb predictive performance result on synthetic networks}
+    \caption{ILFM predictive performance result on synthetic networks}
 \end{table}
 
 Our results confirm the theoretical analysis on nonparametric models, concerning their affinity to the preferential attachment effect and the homophily effect.
