--- a/homophily.tex
+++ b/homophily.tex
@@ -49,7 +49,7 @@ s(i,j) > s(i',j')  \implies \nonumber \\
 \end{equation}
 \end{proposition}
 %
-\noindent The proof of this proposition is also straightforward and stems from the fact that:
+\noindent \textbf{Proof} We have:
 %
 \begin{equation}
 \begin{array}{l}
@@ -59,6 +59,6 @@ s(i,j) > s(i',j')  \implies \nonumber \\
 \end{array}
 \end{equation}
 %
-where $f_{ik}$ denotes, as before, the element of $\mat{F}$ at the $i^{th}$ row and $k^{th}$ column. 
+where $f_{ik}$ denotes, as before, the element of $\mat{F}$ at the $i^{th}$ row and $k^{th}$ column and where the second equality stems from the definitions of $z_{ij}$ and $z_{ji}$. Hence $\mathbb{E}_{\pr(z_{ij},z_{ji}|\mathcal{M})}[\pr(y_{ij}=1 \mid \mathcal{M})]$ varies in the same way as $s$. \hspace{3.5cm} $\Box$
 
 The above development shows that both ILFM and IMMSB can capture the homophily effect, with a strict adherence to it in the case of ILFM, and a looser one for IMMSB. We now turn to the burstiness effect.
