graph added for size debug

--- a/expe.tex
+++ b/expe.tex
@@ -98,13 +98,32 @@ The table \ref{table:ibp} shows the precision and recall results, for each netwo
 \end{table}
 
 Our results confirm the theoretical analysis on nonparametric models, concerning their affinity to the preferential attachment effect and the homophily effect.
+
 %Our experiments evaluate the preferential attachment and the local preferential attachment on the learned communities trough respectively the distribution of degrees in the networks and inside the communities.
-%\begin{figure}[h]
-%	\centering
-%	\includegraphics[scale=0.8]{../figures/img/prop/gen3_order_immsb_10}
-%	\caption{\textbf{Adjacency matrices re-ordered according to the detected communities}}
-%	\label{fig:}
-%\end{figure}
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.25]{img/Graph7}
+	\caption{\textbf{Adjacency matrices re-ordered according to their communities.}}
+	\label{fig:}
+\end{figure}
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.25]{img/Graph12}
+	\caption{\textbf{Adjacency matrices re-ordered according to their communities.}}
+	\label{fig:}
+\end{figure}
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.25]{img/Graph4}
+	\caption{\textbf{Adjacency matrices re-ordered according to their communities.}}
+	\label{fig:}
+\end{figure}
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.25]{img/Graph10}
+	\caption{\textbf{Adjacency matrices re-ordered according to their communities.}}
+	\label{fig:}
+\end{figure}
 %
 %
 %\begin{figure}[h]
