--- a/expe.tex
+++ b/expe.tex
@@ -141,4 +141,9 @@ Our results confirm the theoretical analysis on nonparametric models, concerning
 %\end{figure}
 %
 
+
+\clearpage
+
+\input{rez_brute_force}
+
 \clearpage
