--- a/expe.tex
+++ b/expe.tex
@@ -182,10 +182,8 @@ ILFM confirm his tendancy to learn more features on bursty networks. Nevertheles
 \hline                                                                             
  immsb / mask all   &        5 &       10 &       15 &       20 \\                 
 \hline                                                                             
- Graph7 b/h         & 0.989636 & 0.989939 & 0.990358 & 0.989873 \\                 
- Graph12 b/-h       & 0.99179  & 0.991689 & 0.991997 & 0.992259 \\                 
- Graph4 -b/h        & 0.886844 & 0.888035 & 0.908348 & 0.906659 \\                 
- Graph10 -b/-h      & 0.979057 & 0.979144 & 0.979487 & 0.979366 \\                 
+fb\_uc & & & & \\
+manufacturing  & & & & \\
 \hline                                                                             
 \end{tabular}  
 \end{table}
@@ -198,10 +196,8 @@ ILFM confirm his tendancy to learn more features on bursty networks. Nevertheles
 \hline
  ibp / mask all   &     global &   precision &      recall &   K-\ensuremath{>} \\
 \hline
- Graph7 b/h       & nan        & nan         & nan         &   nan \\
- Graph12 b/-h     &   0.992204 &   0.0532044 &   0.0537897 &    13 \\
- Graph4 -b/h      &   0.939498 &   0.496967  &   0.490113  &    10 \\
- Graph10 -b/-h    &   0.981577 &   0.0910384 &   0.09826   &    11 \\
+fb\_uc& & & & \\
+manufacturing  & & & & \\
 \hline
 \end{tabular}  
 \end{table}
